--- a/smartpointers_case_study/smartpointers_case_study.cbp
+++ b/smartpointers_case_study/smartpointers_case_study.cbp
@@ -12,6 +12,7 @@
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
+					<Add option="-std=c++1y" />
 					<Add option="-g" />
 				</Compiler>
 			</Target>
@@ -31,6 +32,7 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="main.cpp" />
 		<Extensions>
 			<code_completion />
 			<envvars />
